Focus on heading after in-pane navigations
Fixed: 330404688
Change-Id: I29cd3a0df85fd438377a3991577f8a156941df71
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5380921
Auto-Submit: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -96,6 +96,10 @@ header {
   height: 14px;
 }
 
+header:focus-visible {
+  outline: none;
+}
+
 header > .filler {
   flex: 1;
 }
@@ -266,6 +270,10 @@ h2 {
   font-size: inherit;
   margin: 0;
   font-weight: inherit;
+}
+
+h2:focus-visible {
+  outline: none;
 }
 
 .info {
