Tweak list indents in Insights
With this change, list item indent also applies to the second line
in a bullet point.

Bug: b/299423255
Change-Id: I0252cf34b34db654f588126d53448e47c47fbdd2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5380713
Auto-Submit: Yang Guo <yangguo@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -127,6 +127,8 @@ main {
     li {
       display: list-item;
       list-style-type: disc;
+      list-style-position: outside;
+      margin-inline-start: 1em;
     }
 
     li::marker {
