Revert "Control hover button via visibility"
This reverts commit 7e273c22268463bbd42d3465e81218d7b3f91772.

Reason for revert: fix didn't help

Original change's description:
> Control hover button via visibility
>
> Hopefully, it solves the issue with screen readers on Windows
> and CrOS.
>
> Fixed: 330403676
> Change-Id: I2728d7000c1d628dad40f9d1cfd9f09689a049c3
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5383465
> Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
> Reviewed-by: Danil Somsikov <dsv@chromium.org>

Bug: 330403676
Change-Id: I56ae8edc20ab1fd7af6f5f50d859cd74b6533fe0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5382409
Auto-Submit: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -497,9 +497,8 @@ devtools-console-insight {
   padding: 4px 3px 4px 5px;
   position: absolute;
   right: 6px;
-  display: block;
+  display: none;
   width: var(--width);
-  visibility: hidden;
 }
 
 .hover-button span {
@@ -543,7 +542,7 @@ devtools-console-insight {
   &:focus,
   &.console-selected {
     .hover-button {
-      visibility: visible;
+      display: block;
 
       &:focus,
       &:hover {
