Revert "[M123] Use hardcoded values for surface colors in baseline theme"
This reverts commit 022206f9da83d9e9fa8037327b7bf29553bb6fe6.

Reason for revert: https://crbug.com/330678210#comment6

Original change's description:
> [M123] Use hardcoded values for surface colors in baseline theme
>
> Doc: https://docs.google.com/document/d/1vu_8iXQoY5W_aw24HhSgbxTH-itupuwkycKebbqzcR4
> Bug: 41495790
> Change-Id: Idff194cdf8628e0bc40154ea76b47c2b1fed9a65
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5307616
> Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
> Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
> Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
> (cherry picked from commit 0508f12d1365abe4b739a3e79d316768ed076039)
> Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5366801
> Reviewed-by: Andres Olivares <andoli@chromium.org>

Bug: b:330587444, b:41495790, b:330678210
Change-Id: I3546fc4053296c1adf38d5839f2de27a7d6d75ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5385656
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/panels/emulation/deviceModeView.css
+++ b/front_end/panels/emulation/deviceModeView.css
@@ -8,12 +8,12 @@
   overflow: hidden;
   align-items: stretch;
   flex: auto;
-  background-color: var(--app-color-toolbar-background);
+  background-color: var(--sys-color-cdt-base);
 }
 
 .device-mode-toolbar {
   flex: none;
-  background-color: var(--app-color-toolbar-background);
+  background-color: var(--sys-color-cdt-base);
   border-bottom: 1px solid var(--sys-color-divider);
   display: flex;
   flex-direction: row;
