--- a/front_end/panels/network/networkPanel.css
+++ b/front_end/panels/network/networkPanel.css
@@ -58,11 +58,11 @@
 }
 
 .network-details-view {
-  background: var(--app-color-toolbar-background);
+  background: var(--sys-color-cdt-base);
 }
 
 .network-details-view-tall-header {
-  border-top: 4px solid var(--app-color-toolbar-background);
+  border-top: 4px solid var(--sys-color-cdt-base);
 }
 
 .network-item-view {
