Only add braces for style rule
Fixed: b/328403284
Change-Id: Ib5c23c3431268e2edc044eea658cef7b49c2b430
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5424630
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/stylesSidebarPane.css
+++ b/front_end/panels/elements/stylesSidebarPane.css
@@ -57,6 +57,12 @@
     color: var(--sys-color-token-meta);
   }
 
+  .ancestor-rule-list,
+  .styles-section-title {
+    overflow-wrap: break-word;
+    white-space: normal;
+  }
+
   .ancestor-rule-list devtools-css-query {
     display: block;
   }
@@ -92,13 +98,6 @@
 
 .sidebar-pane-closing-brace {
   clear: both;
-}
-
-.styles-section-title {
-  background-origin: padding;
-  background-clip: padding;
-  word-wrap: break-word;
-  white-space: normal;
 }
 
 .styles-section-subtitle {
