--- a/front_end/panels/elements/stylesSidebarPane.css
+++ b/front_end/panels/elements/stylesSidebarPane.css
@@ -105,11 +105,15 @@
   float: right;
   padding-left: 15px;
   max-width: 100%;
+  height: 15px;
+  margin-bottom: -1px;
+}
+
+.styles-section-subtitle * {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  height: 15px;
-  margin-bottom: -1px;
+  max-width: 100%;
 }
 
 .sidebar-pane-open-brace,
