--- a/front_end/panels/elements/stylePropertiesTreeOutline.css
+++ b/front_end/panels/elements/stylePropertiesTreeOutline.css
@@ -110,12 +110,8 @@ ol.expanded {
   z-index: 1;
   width: 18px;
   left: -40px; /* original -2px + (-38px) to compensate for the first line outdent */
-  top: 1px;
+  top: 0.5px;
   height: 13px;
-}
-
-.tree-outline li.child-editing .enabled-button {
-  visibility: hidden;
 }
 
 .overloaded:not(.has-ignorable-error, .invalid-property-value),
@@ -265,11 +261,8 @@ ol.expanded {
   display: none;
 }
 
-:host-context(.matched-styles:not(.read-only):hover) .enabled-button {
-  visibility: visible;
-}
-
-:host-context(.matched-styles:not(.read-only)) .tree-outline li.disabled .enabled-button {
+:host-context(.matched-styles:not(.read-only):hover) li:not(.child-editing) .enabled-button,
+:host-context(.matched-styles:not(.read-only)) .tree-outline li.disabled:not(.child-editing) .enabled-button {
   visibility: visible;
 }
 
