Fix scroll bar when the Network panel does not show waterfall
Fixed: b/333660753
Change-Id: I7806ae51ca3dad604eb7758d31d407a0f47cbc6e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5444826
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Auto-Submit: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -286,7 +286,7 @@
   visibility: hidden;
 }
 
-#network-container.grid-mode .data-container {
+#network-container.has-waterfall .data-container {
   overflow: hidden;
 }
 
