[GM3Restyling] Introduce ToolbarFilter for toolbar filter bars
This adds a ToolbarFilter that is styled according to GM3.

Bug: 325442270
Change-Id: Iff5177d87aefc0b6ae3ddd793ec14b5c2b9525a0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5386156
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/textPrompt.css
+++ b/front_end/ui/legacy/textPrompt.css
@@ -7,6 +7,7 @@
 .text-prompt-root {
   display: flex;
   align-items: center;
+  font-size: var(--sys-size-6);
 }
 
 .text-prompt-editing {
@@ -37,9 +38,15 @@
   color: var(--sys-color-token-subtle) !important; /* stylelint-disable-line declaration-no-important */
 }
 
-.text-prompt[data-placeholder]:empty::before {
-  content: attr(data-placeholder);
-  color: var(--sys-color-token-subtle);
+.text-prompt[data-placeholder] {
+  &:empty::before {
+    content: attr(data-placeholder);
+    color: var(--sys-color-on-surface-subtle);
+  }
+
+  &.disabled:empty::before {
+    color: var(--sys-color-state-disabled);
+  }
 }
 
 .text-prompt:not([data-placeholder]):empty::after {
