--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -332,43 +332,45 @@ select.toolbar-item:focus-visible > * {
 /* Input */
 
 .toolbar-input {
+  box-shadow: inset 0 0 0 2px transparent;
+  box-sizing: border-box;
   width: 120px;
-  height: 19px;
-  padding: 4px 3px 3px;
+  height: var(--sys-size-9);
+  padding: 0 var(--sys-size-2) 0 var(--sys-size-5);
   margin: 1px 3px;
-  background: var(--sys-color-cdt-base-container);
-  border: 1px solid var(--sys-color-neutral-outline);
-  border-radius: 4px;
+  border-radius: 100px;
   min-width: 35px;
+  position: relative;
 
-  &.focused,
-  &:not(.toolbar-input-empty) {
-    border-color: var(--sys-color-state-focus-ring);
+  &.focused {
+    box-shadow: inset 0 0 0 2px var(--sys-color-state-focus-ring);
   }
 
   &:hover:not(.focused) {
-    background: var(--sys-color-state-hover-on-subtle);
+    background-color: var(--sys-color-state-hover-on-subtle);
   }
 
-  & > input {
-    border: none;
-    flex-grow: 1;
+  &::before {
+    content: "";
+    box-sizing: inherit;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    background: var(--sys-color-cdt-base);
+    z-index: -1;
   }
-}
 
-.toolbar-input-clear-button {
-  opacity: 70%;
-  flex-basis: 13px;
-  flex-shrink: 0;
-  height: 16px;
-}
+  & > devtools-icon {
+    color: var(--sys-color-on-surface-subtle);
+    width: var(--sys-size-8);
+    height: var(--sys-size-8);
+    margin-right: var(--sys-size-3);
+  }
 
-.toolbar-input-clear-button > .search-cancel-button {
-  display: block;
-}
-
-.toolbar-input-clear-button:hover {
-  opacity: 99%;
+  &.disabled > devtools-icon {
+    color: var(--sys-color-state-disabled);
+  }
 }
 
 .toolbar-input-empty .toolbar-input-clear-button {
