[GM3Restyling] Update surface color.
Bug: 330213829
Change-Id: I2d6832cbed613d76e2914a27413720b20fd548ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5471949
Reviewed-by: Peter Müller <petermueller@chromium.org>
Commit-Queue: Peter Müller <petermueller@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/themeColors.css
+++ b/front_end/ui/legacy/themeColors.css
@@ -219,7 +219,7 @@
 
   /* Universal surfaces */
 
-  --sys-color-surface: var(--ref-palette-neutral100);
+  --sys-color-surface: var(--ref-palette-neutral99);
   --sys-color-surface-variant: var(--ref-palette-neutral-variant90);
 
   /* Containers */
@@ -444,6 +444,7 @@
 :root.baseline-default,
 :root.baseline-grayscale {
   --sys-color-base: var(--ref-palette-neutral100);
+  --sys-color-surface: var(--ref-palette-neutral100);
 
   &.-theme-with-dark-background {
     --sys-color-surface5: color-mix(in sRGB, #d1e1ff 14%, var(--ref-palette-neutral10));
