RPP: change track configuration UI
This CL makes the following changes to the track configuration UI:

1. The pencil edit icon is removed (and the whitespace too). This means
   when you are not in this view, the UI looks like it always did.
2. To enter the mode, you right click on a track header, and enter it
   via the context menu action.
3. To exit the mode, you can either right click anywhere to view a
   context menu with an "Exit" link, or click the blue pill that appears
   at the bottom of the flamechart (but fixed, so it cannot be scrolled
   out of view).

Bug: 336266699
Change-Id: I4ca64259d9f5a5f701d321626086eaa2eec94c83
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5490423
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/ui/legacy/components/perf_ui/flameChart.css
+++ b/front_end/ui/legacy/components/perf_ui/flameChart.css
@@ -95,3 +95,9 @@
 .flame-chart-entry-info table tr td span {
   margin-right: 5px;
 }
+
+.flame-chart-edit-confirm {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+}
