RPP: Add Debug Mode experiment
Allows seeing the full trace event as JSON in Summary tab

Screenshot: https://imgur.com/gr6OzXU

Bug: 40837304
Change-Id: I1c464764fec6668a6ba4b3f3d566377c962000e3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5507874
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -194,6 +194,7 @@
   overflow: hidden;
   padding-right: 10px;
   display: inline-block;
+  vertical-align: top;
 }
 
 .timeline-details-warning {
@@ -214,7 +215,6 @@
 .timeline-details-view-row-value {
   display: inline-block;
   user-select: text;
-  white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   padding: 0 3px;
