--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -530,10 +530,9 @@ button.link {
 }
 
 button.link:focus-visible {
-  --override-link-focus-background-color: rgb(0 0 0 / 8%);
-
-  background-color: var(--override-link-focus-background-color);
-  border-radius: 2px;
+  outline: 2px solid var(--sys-color-state-focus-ring);
+  outline-offset: 2px;
+  border-radius: var(--sys-shape-corner-full);
 }
 
 .-theme-with-dark-background button.link:focus-visible,
