Add toggles to button component
Bug: 325441197
Change-Id: I7d1c9bacefdcdf45308af723c009ca8d7e709c64
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5514859
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/components/buttons/button.css
+++ b/front_end/ui/components/buttons/button.css
@@ -30,6 +30,9 @@
   align-items: center;
 }
 
+/* This specific nesting is incompatible with what stylelint requires as ordering of the rules. */
+/* stylelint-disable no-descending-specificity */
+
 button {
   --hover-layer-color: var(--sys-color-state-hover-on-subtle);
   --active-layer-color: var(--sys-color-state-ripple-neutral-on-subtle);
@@ -50,6 +53,14 @@ button {
   padding: 0 var(--sys-size-6);
   white-space: nowrap;
   width: var(--button-width);
+
+  &.primary-toggle {
+    --toggle-color: var(--sys-color-primary-bright);
+  }
+
+  &.red-toggle {
+    --toggle-color: var(--sys-color-error-bright);
+  }
 
   devtools-icon {
     width: var(--icon-size);
@@ -74,6 +85,10 @@ button {
       --button-height: var(--sys-size-11);
       --button-width: var(--sys-size-11);
       --icon-size: var(--sys-size-8);
+    }
+
+    &.toggled devtools-icon {
+      color: var(--toggle-color); /* stylelint-disable-line plugin/use_theme_colors */
     }
   }
 
@@ -125,8 +140,6 @@ button {
     }
   }
 
-  /* This specific nesting is incompatible with what stylelint requires as ordering of the rules. */
-  /* stylelint-disable no-descending-specificity */
   &.outlined {
     border: var(--button-border-size) solid var(--sys-color-tonal-outline);
     background: transparent;
@@ -185,7 +198,6 @@ button {
       color: var(--icon-disabled);
     }
   }
-  /* stylelint-enable no-descending-specificity */
 
   &:not(.icon):not(.toolbar).only-icon {
     width: 100%;
@@ -211,8 +223,6 @@ button {
     padding-left: var(--sys-size-4);
   }
 
-  /* This specific nesting is incompatible with what stylelint requires as ordering of the rules. */
-  /* stylelint-disable no-descending-specificity */
   &:hover::after {
     content: "";
     height: 100%;
@@ -263,8 +273,8 @@ button {
       }
     }
   }
-  /* stylelint-enable no-descending-specificity */
 }
+/* stylelint-enable no-descending-specificity */
 
 .spinner {
   display: block;
