--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -346,7 +346,7 @@ select.toolbar-item:focus-visible > * {
     box-shadow: inset 0 0 0 2px var(--sys-color-state-focus-ring);
   }
 
-  &:hover:not(.focused) {
+  &:not(:has(devtools-button:hover)):hover {
     background-color: var(--sys-color-state-hover-on-subtle);
   }
 
