[elements] Ensure that focus is visible for <style> anchors.
This adds the missing padding to ensure that the focus ring is actually
visible for `<style>` (and other) anchors. It also switches to using the
size tokens here instead of hardcoding pixel sizes.

Bug: 338348417
Change-Id: Iea7d9377fea5dd94faa52e65a7dedae177d541a5
Screenshot: https://i.imgur.com/qgDAwl4.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5541753
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/elements/stylesSidebarPane.css
+++ b/front_end/panels/elements/stylesSidebarPane.css
@@ -103,7 +103,7 @@
 .styles-section-subtitle {
   color: var(--sys-color-token-subtle);
   float: right;
-  padding-left: 15px;
+  padding: var(--sys-size-2) var(--sys-size-2) 0 var(--sys-size-8);
   max-width: 100%;
   height: 15px;
   margin-bottom: -1px;
