[GM3Restyling] Update Event listeners' remove button to an icon
Screenshot: imgur.com/a/W5vFx86

Bug: 325441197
Change-Id: If6a3f69cc205ce15d8a5b41a7f2eb7b0e33dc2c1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5531450
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/front_end/ui/components/buttons/button.css
+++ b/front_end/ui/components/buttons/button.css
@@ -67,10 +67,6 @@ button {
     height: var(--icon-size);
   }
 
-  &.small {
-    --button-height: 20px;
-  }
-
   &.toolbar,
   &.icon,
   &.only-icon {
@@ -78,12 +74,13 @@ button {
     --button-width: 26px;
     --icon-size: var(--sys-size-9);
 
+    padding: 0;
     border: none;
     overflow: hidden;
 
     &.small {
-      --button-height: var(--sys-size-11);
-      --button-width: var(--sys-size-11);
+      --button-height: var(--sys-size-9);
+      --button-width: var(--sys-size-9);
       --icon-size: var(--sys-size-8);
     }
 
@@ -216,6 +213,10 @@ button {
     &.toolbar,
     &.icon {
       outline-offset: -1px;
+
+      &.small {
+        outline-offset: -2px;
+      }
     }
   }
 
