--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -74,7 +74,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  background-color: var(--color-background-elevation-1);
+  background-color: var(--sys-color-surface2);
 }
 
 .next-steps .card {
