--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -101,11 +101,28 @@
   }
 }
 
-.dom-node-link-container {
-  margin-bottom: 2px;
+.input-header {
   display: inline-flex;
   align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2px;
   line-height: 20px;
+
+  & .feedback-icon {
+    width: var(--sys-size-8);
+    height: var(--sys-size-8);
+  }
+
+  & .header-link-container {
+    display: inline-flex;
+    align-items: center;
+    gap: var(--sys-size-2);
+  }
+
+  & .link {
+    color: var(--text-link);
+    text-decoration: underline;
+  }
 }
 
 .select-an-element-text {
