[Freestyler] Allow bubble to be small
Bug: none
Change-Id: I0b8beaa74f68864e0b360b4cfce761d155e97852
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5676127
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -71,8 +71,6 @@
 .chat-message {
   user-select: text;
   cursor: initial;
-  max-width: 320px;
-  min-width: 160px;
   width: fit-content;
   padding: 8px var(--sys-size-8);
   font-size: 12px;
@@ -84,6 +82,7 @@
   }
 
   &.query {
+    max-width: 320px;
     color: var(--sys-color-on-surface);
     background: var(--sys-color-surface2);
     margin-left: auto;
@@ -100,8 +99,9 @@
     padding: 4px 0;
   }
 
-  & .chat-message-bottom-bar {
+  & .actions {
     display: flex;
+    gap: var(--sys-size-8);
     justify-content: space-between;
   }
 }
