Fix scroll margin in Network Throttling settings page
The Network Throttling settings page doesn't have scroll bars. When
tabbing through the input fields of the throttling profiles, and
back-tabbing using (Alt+Tab), the settings view would not correctly
scroll back and thus hide parts of the title. This adds a scroll
margin to the input fields to adjust the scrolling.

Before: https://i.imgur.com/S7qXLcw.png
After: https://i.imgur.com/vJvhApK.png
Fixed: 349529648
Change-Id: I48bf89b1e8d1aac17884ecb3718dcf4c9331c5ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5675319
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -43,6 +43,10 @@
   color: var(--sys-color-on-surface);
   text-align: center;
   position: relative;
+
+  & > input {
+    scroll-margin-left: 5px;
+  }
 }
 
 .conditions-list-text:last-child {
