[Freestyler] Fix stop button style
Also fixes some styling on the input container

Bug: 351969243
Change-Id: I846b0db4fc3d99f9c4e51fcabbf4bf860d5a84c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5687118
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -38,9 +38,10 @@
   height: var(--sys-size-11);
   border-radius: 4px;
   border: 1px solid var(--sys-color-neutral-outline);
-  padding-left: 2px;
+  padding: 0 2px;
   width: 100%;
   display: flex;
+  background-color: var(--sys-color-cdt-base-container);
 }
 
 .chat-input {
@@ -48,6 +49,8 @@
   height: var(--sys-size-11);
   padding: 0 6px;
   flex-grow: 1;
+  color: var(--sys-color-on-surface);
+  background-color: var(--sys-color-cdt-base-container);
 }
 
 .chat-input:focus-visible {
