[RPP] CSS for an annotation in the Sidebar
Screenshot: https://screenshot.googleplex.com/KgEEsu2y2JdqZJH

Bug: 349530077
Change-Id: Ia5b4b992fdc4d7eee5591ebc9a37b77af7140b2f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5688552
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -7,3 +7,23 @@
 .annotations {
   display: block;
 }
+
+.annotation {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  word-break: break-all;
+  padding-top: 15px;
+  gap: 6px;
+}
+
+.entry-name {
+  padding: 4px 8px;
+  border-radius: 10px;
+  font-weight: bold;
+  background-color: var(--app-color-performance-sidebar-label);
+}
+
+.label {
+  font-size: larger;
+}
